src/test/examples/invalid/semanticErr/exit/exitNonInt.wacc
# exit with non-int - this should be an frontend.frontend.invalid program!

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  char x = 'f' ;
  exit x
end
